jerry-core/parser/js/new-parser/tests/js/throw-statement-without-expression.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Expression expected.' at line: 4 col: 1
