jerry-core/parser/js/new-parser/tests/js/throw-statement-without-expression.js
/* This test contains throw statement parser negative tests. */

throw
exp;
